--- a/index.html
+++ b/index.html
@@ -5,7 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="mobile-web-app-capable" content="yes" />
-  <title>Kicking Clicker</title>
+  <title>Kick the Market</title>v
+  <meta name="description" content="Kick the market to go bullish" />
+
+  <meta property="og:title" content="Kick the Market" />
+  <meta property="og:description" content="Kick the market to go bullish" />
+  <meta property="og:image" content="https://kickthemarket.vercel.app/opengraph-image.png" />
+  <meta property="og:url" content="https://kickthemarket.vercel.app" />
+  <meta property="og:type" content="website" />
+  
+  <meta name="fc:frame" content='{"version":"next","imageUrl":"https://kickthemarket.vercel.app/opengraph-image.png","button":{"title":"Kick","action":{"type":"launch_frame","name":"Kick_The_Market","url":"https://kickthemarket.vercel.app","splashImageUrl":"https://kickthemarket.vercel.app/logo.png","splashBackgroundColor":"#000"}}}' />
+  
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Kick the Market" />
+  <meta name="twitter:description" content="Kick the market to go bullish" />
+  <meta name="twitter:image" content="https://kickthemarket.vercel.app/opengraph-image.png" />
   <style>
     * {
       margin: 0;
@@ -39,7 +53,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="game"></div>
-  <script type="module" src="/src/main.js"></script>
+  <!--<div id="game"></div>-->
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
